--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black292929">#292929</color>
+    <color name="black131313">#131313</color>
+    <color name="black232323">#232323</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray7A7A7A">#7A7A7A</color>
+    <color name="grayCBCBCB">#CBCBCB</color>
 </resources>
